--- a/related-searches/Gemfile
+++ b/related-searches/Gemfile
@@ -13,7 +13,8 @@ gem 'protected_attributes'
 
 group :development,:test, :integration do
   gem "rspec_junit_formatter"
-  gem 'sqlite3'
+  #gem 'sqlite3'
+  gem "sqlite3", "~> 1.3.6"
   gem "spreewald", :git => 'https://github.com/makandra/spreewald.git'
 end
 
