adding digital collection search/results

--- a/cornell-catalog-demo/Gemfile
+++ b/cornell-catalog-demo/Gemfile
@@ -66,6 +66,7 @@ group :development, :test do
   gem 'pry-byebug'
   gem 'meta_request'
   gem 'awesome_print'
+  gem 'xray-rails' # Adding to explore which views are used
 end
 
 group :test do
