--- a/related-searches/Gemfile
+++ b/related-searches/Gemfile
@@ -14,7 +14,7 @@ gem 'protected_attributes'
 group :development,:test, :integration do
   gem "rspec_junit_formatter"
   #gem 'sqlite3'
-  gem "sqlite3", "~> 1.3.6"
+  gem "sqlite3"
   gem "spreewald", :git => 'https://github.com/makandra/spreewald.git'
 end
 
