incorporating narrative location map

--- a/cornell-catalog-demo/Gemfile
+++ b/cornell-catalog-demo/Gemfile
@@ -121,3 +121,4 @@ gem 'unicode_utils'
 gem 'google-analytics-rails', '1.1.1'
 gem 'xmlrpc'
 #gem 'qa', :git => 'git@github.com:samvera/questioning_authority', :branch => 'discogs'
+gem 'leaflet-rails'
